nodeapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: web
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      name: web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: web
    spec:
      containers:
      - image: hamzamandviwala/samplenodejs
        name: web
        resources: {}
status: {}
