nodejs-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: NodePort
  ports:
    - nodePort: 30020
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    name: web
